--- a/CoViVoServer/CoViVoServer/CoViVoServer.csproj
+++ b/CoViVoServer/CoViVoServer/CoViVoServer.csproj
@@ -41,6 +41,9 @@
     <Reference Include="System.Xml" />
   </ItemGroup>
   <ItemGroup>
+    <Compile Include="BasicServer.cs" />
+    <Compile Include="AbstractServer.cs" />
+    <Compile Include="AppServer.cs" />
     <Compile Include="Program.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
   </ItemGroup>
