--- a/WrapperLib/WrapperLib/WrapperLib.csproj
+++ b/WrapperLib/WrapperLib/WrapperLib.csproj
@@ -40,9 +40,12 @@
   </ItemGroup>
   <ItemGroup>
     <Compile Include="AudioVideoText.cs" />
+    <Compile Include="Class1.cs" />
+    <Compile Include="ServerMsg.cs" />
     <Compile Include="Error.cs" />
     <Compile Include="Message.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
+    <Compile Include="Util.cs" />
   </ItemGroup>
   <Import Project="$(MSBuildToolsPath)\Microsoft.CSharp.targets" />
   <!-- To modify your build process, add your task inside one of the targets below and uncomment it. 
