--- a/WrapperLib/WrapperLib/WrapperLib.csproj
+++ b/WrapperLib/WrapperLib/WrapperLib.csproj
@@ -39,12 +39,16 @@
     <Reference Include="System.Xml" />
   </ItemGroup>
   <ItemGroup>
-    <Compile Include="AudioVideoText.cs" />
+    <Compile Include="Audio.cs" />
+    <Compile Include="ChannelList.cs" />
+    <Compile Include="JoinChannel.cs" />
     <Compile Include="ServerMsg.cs" />
     <Compile Include="Error.cs" />
     <Compile Include="Message.cs" />
     <Compile Include="Properties\AssemblyInfo.cs" />
+    <Compile Include="Text.cs" />
     <Compile Include="Util.cs" />
+    <Compile Include="Video.cs" />
   </ItemGroup>
   <Import Project="$(MSBuildToolsPath)\Microsoft.CSharp.targets" />
   <!-- To modify your build process, add your task inside one of the targets below and uncomment it. 
